# mosp-web

./: .gitignore  .gitmodules  README.md  README.mkd  TODO.txt  discordLogging.py  dump_fixtures  garbage.py  lint.sh  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  sync_static  tsconfig.json
.github/workflows/: codeql-analysis.yml  main.yml  pr.yaml  pr.yml  pyright_to_rdjson.py  unit.yml
core/: admin.py  apps.py  colormap.py  factories.py  models.py  progresso.py  template  urls.py  utils.py  views.py
core/fixtures/: 20210723.yaml  20210724.yaml  20210823.yaml  20211323.yaml
core/migrations/: 0001_initial.py  0001_squashed_0053_auto_20210724_0009.py  0002_auto_20210627_1135.py  0002_auto_20210724_0407.py  0003_puzzle_place_slug.py  0003_puzzle_status_progress.py  0004_alter_puzzle_status_progress.py  0004_auto_20210629_1539.py  0005_auto_20210629_1602.py  0005_testsolvesession.py  0006_alter_puzzle_puzzle_head.py  0006_rename_time_until_hint_minutes_until_unlock.py  0007_auto_20210703_0015.py  0007_auto_20220130_1730.py  0008_auto_20210703_0024.py  0008_auto_20220430_2135.py  0009_alter_puzzle_place_slug.py  0009_remove_testsolvesession_puzzle_remove_token_attempts_and_more.py  0010_auto_20210703_0035.py  0011_alter_puzzle_puzzle_head.py  0012_auto_20210703_0053.py  0013_auto_20210703_0059.py  0014_auto_20210703_0059.py  0015_auto_20210703_0111.py  0016_auto_20210703_0117.py  0017_auto_20210703_0130.py  0018_alter_solve_unlocked_on.py  0019_auto_20210703_0227.py  0020_auto_20210703_0402.py  0021_remove_saltedanswer_is_final.py  0022_auto_20210703_1804.py  0023_auto_20210703_2023.py  0024_puzzle_display_answer.py  0025_auto_20210703_2311.py  0026_auto_20210704_0233.py  0027_auto_20210704_0316.py  0028_auto_20210704_0400.py  0029_auto_20210704_0411.py  0030_auto_20210704_1538.py  0031_auto_20210705_0202.py  (+22 more)
core/static/: badminz.css  bright.css  common.css  dark.css  old.css
core/templates/: base.html
core/templates/core/: editor_form.html  hunt_list.html  needs_token.html  puzzle_detail.html  puzzle_form.html  puzzle_list.html  puzzlesolution_detail.html  reveal.html  round_list.html  round_unlockable_list.html  solution_detail.html  staff_hunt_list.html  staff_puzzle_list.html  staff_unlockable_list.html  token_detail.html  token_form.html  too_early.html  unlockable_detail.html  unlockable_form.html  unlockable_list.html  unlockable_requirements.html  welcome.html
core/templatetags/: extras.py  mkd.py
data2021/: apps.py  tsconfig.json
data2021/src/: set.ts  zoom.ts
data2021/static/2021/: Makefile
data2021/static/2021/lost-in-translation/: mosp-bandbook.tex
data2021/static/2021/meta/: shell.csv
data2021/static/2021/set/: puzzle.js  set.css  set.js
data2021/static/2021/zoom/: zoom.js
docs/: INSTALL.md  INSTALL.mkd  MODELS.md  MODELS.mkd
fixtures/: core.20230307.json  info.20230307.json
info/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
info/fixtures/: 20211223.yaml
info/migrations/: 0001_initial.py  0002_auto_20210720_0624.py  0003_alter_page_content.py
info/templates/info/: page_detail.html  page_form.html
mospweb/: asgi.py  settings.py  tests.py  testsuite.py  urls.py  wsgi.py
mospweb/static/css/: admin-purple.css
mospweb/templates/: base.html  base_site.html  generic-form.html  layout.html
mospweb/templates/markdownx/: widget.html
mospweb/templates/socialaccount/: connections.html
puzzle_editing/: README.mkd  admin.py  urls.py  views.py
puzzle_editing/migrations/: 0001_squashed_0004_auto_20210719_0724.py  0004_auto_20210719_0724.py
puzzle_editing/templates/: account.html  all.html  authored.html  awaiting_editor.html  bulk_add_answers.html  change-password-done.html  change-password.html  edit_answer.html  edit_comment.html  edit_hint.html  edit_round.html  edit_tag.html  editors.html  factcheck.html  index.html  index_not_logged_in.html  login.html  logout.html  needs_editor.html  new.html  new_tag.html  puzzle.html  puzzle_answers.html  puzzle_edit.html  puzzle_escape.html  puzzle_people.html  puzzle_tags.html  puzzle_unspoiled.html  puzzlord_base.html  random_answers.html  register.html  rounds.html  single_tag.html  spoiled.html  statistics.html  tags.html  testsolve_finder.html  testsolve_finish.html  testsolve_main.html  testsolve_one.html  (+3 more)
templates/account/: login.html  logout.html  signup.html
templates/admin/: base_site.html
testsolve/: apps.py
theme/: whitelist.txt
theme/static_src/: bs.config.js  package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
typescript/: apps.py
typescript/src/: ajaxCrash.ts  checkname.ts  grader.ts  main.ts
typescripts/: apps.py  tsconfig.json
typescripts/src/: ajaxCrash.ts  checkname.ts  cookie.ts  grader.ts  images.ts  main.ts  setname.ts  sha.ts
